--- a/arka.html
+++ b/arka.html
@@ -174,14 +174,23 @@
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
 
     // 2. KENDİ FİREBASE BİLGİLERİNİ BURAYA YAPIŞTIR
-    const firebaseConfig = {
-        apiKey: "SENİN_API_KEYİN",
-        authDomain: "proje-adin.firebaseapp.com",
-        projectId: "proje-adin",
-        storageBucket: "proje-adin.appspot.com",
-        messagingSenderId: "123456789",
-        appId: "SENİN_APP_ID"
-    };
+ const firebaseConfig = {
+
+  apiKey: "AIzaSyDKWEvPGCcjecP-r4MceBudchDRX2QdaJA",
+
+  authDomain: "trakya-42e32.firebaseapp.com",
+
+  projectId: "trakya-42e32",
+
+  storageBucket: "trakya-42e32.firebasestorage.app",
+
+  messagingSenderId: "597076769834",
+
+  appId: "1:597076769834:web:09b473538bd2b6b30bd753",
+
+  measurementId: "G-R8SJWP5TSC"
+
+};
 
     // Firebase'i Başlat
     const app = initializeApp(firebaseConfig);
